src/smtp/manifests/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smtp4dev-ingress
  namespace: mp4-to-mp3
spec:
  rules:
  - host: my-smtp4dev-manager.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: smtp4dev-statefulset-svc
            port:
              number: 80
